--- a/CBL/KernelModeule/Lock/Makefile
+++ b/CBL/KernelModeule/Lock/Makefile
@@ -1,6 +1,6 @@
 #这是多个源文件编译成内核模块的统一书写方法
 ifneq  ($(KERNELRELEASE),)
-	obj-m += AtomicTest.o SemTest.o RwSemTest.o SpinLockTest.o RwLockTest.o SeqLockTest.o WaitEventTest.o
+	obj-m += AtomicTest.o SemTest.o RwSemTest.o SpinLockTest.o RwLockTest.o SeqLockTest.o WaitEventTest.o CompletionTest.o
 else
 	KDIR := /lib/modules/$(shell uname -r)/build
 	PWD:=$(shell pwd)
